:sparkles: review:5.8への対応

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,4 @@ services:
     working_dir: /book
     volumes:
       - .:/book
-    command: /bin/bash -ci "cd /book/articles && review-pdfmaker config.yml"
-    # command: /bin/bash -ci "cd /book/articles && rake pdf --trace"
+    command: /bin/bash -ci "cd /book/articles && rake pdf"
