--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,12 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build:
     name:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       # uses v2 Stable version
       # https://github.com/actions/checkout
