--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["taichi.vscode-textlint", "atsushieno.language-review"]
+  "recommendations": [
+    "atsushieno.language-review",
+    "3w36zj6.textlint"
+  ]
 }
