--- a/prh-rules/media/techbooster.yml
+++ b/prh-rules/media/techbooster.yml
@@ -77,8 +77,8 @@ rules:
   - expected: すべて
     pattern:  /(全て|総て)/
     prh: 漢字で書かず、ひらがなで書くと読みやすくなります
-  - expected: たとえ
-    pattern:  /(例えば|例え)/
+  - expected: たとえば
+    pattern:  例えば
     prh: 漢字で書かず、ひらがなで書くと読みやすくなります
   - expected: 他の
     pattern:  ほかの
